fix: remove gap in FF

--- a/src/components/Breadcrumbs/breadcrumbs.module.scss
+++ b/src/components/Breadcrumbs/breadcrumbs.module.scss
@@ -4,6 +4,7 @@
   color: var(--accent-primary);
   justify-content: center;
   align-items: center;
+  gap: 0;
 
   ul {
     display: contents;
